made content list with button

--- a/src/index.html
+++ b/src/index.html
@@ -97,108 +97,167 @@
             13 400 Р
           </span>
 
-          <div class="ticket__pic">
-            <img src="img/S7Logo.jpg" alt="#">
-          </div>
+          <img src="img/s7.png" alt="company" class="ticket__img">
 
-          <span class="ticket__something-time">
+          <span class="ticket__something-time span-text">
             MOW – HKT
           </span>
-          <p class="ticket__something-time-text">
+
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
+
+          <span class="ticket__transfers span-text">
+            2 пересадки
+          </span>
+
+          <p class="ticket__something-time-text p-text">
             10:45 – 08:00
           </p>
 
-          <span class="ticket__time-spending">
-            В пути
-          </span>
-          <p class="ticket__time-spending-text">
+          <p class="ticket__time-spending-text p-text">
             21ч 15м
           </p>
 
-          <span class="ticket__transfers">
-            2 пересадки
-          </span>
-          <p class="ticket__transfers-text">
+          <p class="ticket__transfers-text p-text">
             HKG, JNB
           </p>
 
-          <span class="ticket__something-time under">
+          <span class="ticket__something-time span-text">
             MOW – HKT
           </span>
-          <p class="ticket__something-time-text under">
+
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
+
+          <span class="ticket__transfers span-text">
+            1 пересадка
+          </span>
+
+          <p class="ticket__something-time-text p-text">
             11:20 – 00:50
           </p>
 
-          <span class="ticket__time-spending under">
-            В пути
-          </span>
-          <p class="ticket__time-spending-text under">
+          <p class="ticket__time-spending-text p-text">
             13ч 30м
           </p>
 
-          <span class="ticket__transfers under">
-            1 пересадка
-          </span>
-          <p class="ticket__transfers-text under">
+          <p class="ticket__transfers-text p-text">
             HKG
           </p>
         </li>
 
         <li class="tickets-list__item ticket">
           <span class="ticket__price">
-
+            13 400 Р
           </span>
 
-          <div class="ticket__pic">
-            <img src="" alt="#">
-          </div>
+          <img src="img/s7.png" alt="company" class="ticket__img">
 
-          <span class="ticket__something-time"></span>
-          <p class="ticket__something-time-text"></p>
+          <span class="ticket__something-time span-text">
+            MOW – HKT
+          </span>
 
-          <span class="ticket__time-spending"></span>
-          <p class="ticket__time-spending-text"></p>
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
 
-          <span class="ticket__transfers"></span>
-          <p class="ticket__transfers-text"></p>
+          <span class="ticket__transfers span-text">
+            2 пересадки
+          </span>
 
-          <span class="ticket__something-time under"></span>
-          <p class="ticket__something-time-text under"></p>
+          <p class="ticket__something-time-text p-text">
+            10:45 – 08:00
+          </p>
 
-          <span class="ticket__time-spending under"></span>
-          <p class="ticket__time-spending-text under"></p>
+          <p class="ticket__time-spending-text p-text">
+            21ч 15м
+          </p>
 
-          <span class="ticket__transfers under"></span>
-          <p class="ticket__transfers-text under"></p>
+          <p class="ticket__transfers-text p-text">
+            HKG, JNB
+          </p>
 
+          <span class="ticket__something-time span-text">
+            MOW – HKT
+          </span>
+
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
+
+          <span class="ticket__transfers span-text">
+            1 пересадка
+          </span>
+
+          <p class="ticket__something-time-text p-text">
+            11:20 – 00:50
+          </p>
+
+          <p class="ticket__time-spending-text p-text">
+            13ч 30м
+          </p>
+
+          <p class="ticket__transfers-text p-text">
+            HKG
+          </p>
         </li>
 
         <li class="tickets-list__item ticket">
           <span class="ticket__price">
-
+            13 400 Р
           </span>
 
-          <div class="ticket__pic">
-            <img src="" alt="#">
-          </div>
+          <img src="img/s7.png" alt="company" class="ticket__img">
 
-          <span class="ticket__something-time"></span>
-          <p class="ticket__something-time-text"></p>
+          <span class="ticket__something-time span-text">
+            MOW – HKT
+          </span>
 
-          <span class="ticket__time-spending"></span>
-          <p class="ticket__time-spending-text"></p>
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
 
-          <span class="ticket__transfers"></span>
-          <p class="ticket__transfers-text"></p>
+          <span class="ticket__transfers span-text">
+            2 пересадки
+          </span>
 
-          <span class="ticket__something-time under"></span>
-          <p class="ticket__something-time-text under"></p>
+          <p class="ticket__something-time-text p-text">
+            10:45 – 08:00
+          </p>
 
-          <span class="ticket__time-spending under"></span>
-          <p class="ticket__time-spending-text under"></p>
+          <p class="ticket__time-spending-text p-text">
+            21ч 15м
+          </p>
 
-          <span class="ticket__transfers under"></span>
-          <p class="ticket__transfers-text under"></p>
+          <p class="ticket__transfers-text p-text">
+            HKG, JNB
+          </p>
+
+          <span class="ticket__something-time span-text">
+            MOW – HKT
+          </span>
+
+          <span class="ticket__time-spending span-text">
+            В пути
+          </span>
+
+          <span class="ticket__transfers span-text">
+            1 пересадка
+          </span>
+
+          <p class="ticket__something-time-text p-text">
+            11:20 – 00:50
+          </p>
+
+          <p class="ticket__time-spending-text p-text">
+            13ч 30м
+          </p>
+
+          <p class="ticket__transfers-text p-text">
+            HKG
+          </p>
         </li>
       </ul>
 
